# benang-merah-perpisahan-project

./: .gitignore  README.md  async_scraper.py  main.py  pyproject.toml  requirements.txt  scaled_async_scraper.py
ETL/src/: README.md  join_txt_to_jsonl.py  parallel_processes.py  process_verdict.py  structure_output.py
ETL/src/utils/: pdf_utils.py  state_utils.py  text_cleaning.py  text_structure.py
archive/: check_duplicate_nomor.py  convert_timestamp_to_local.py  fix_csv.py
archive/extraction/: parallel_processes.py
archive/extraction/src/: extract_pdf.py  preprocess_sections.py  process_verdict.py  structure_output.py
data/: active_learning.py  count_pdf_pages.py  divorce_reason_classifier.py  divorce_reasons_extraction.py  divorce_utils.py  merge_reviewed_with_autolabeled.py
docs/: implementation_plan.md
extraction/: extract_pdf.py  parallel_processes.py  process_verdict.py  structure_output.py
extraction/src/: extract_pdf.py  preprocess_cleaned_txt.py  preprocess_sections.py  process_verdict.py
extraction/src/utils/: file_utils.py
paper/: manuscript.qmd  references.bib  todo.md
paper/analysis/: data_statistics.py
scraper/: config.py  estimate_result.txt  estimator.py  run_batches.py  scraper.py
scrapy/: scrapy.cfg
scrapy/court_cases/: items.py  middlewares.py  pipelines.py  settings.py
scrapy/court_cases/spiders/: __init__.py  court_cases_spider.py
tests/: small_scale_async_scraper.py
