[project]
name = "benang-merah-perpisahan-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "beautifulsoup4",
    # "httpx",      # Uncomment if you want async/concurrent fetching
    # "aiohttp",    # Uncomment if you want async/concurrent fetching
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
    "tqdm>=4.67.1",
    "aiocfscrape>=1.0.0",
]
