[project]
name = "benang-merah-perpisahan-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "hdbscan>=0.8.40",
    "jupyter>=1.1.1",
    "keybert>=0.9.0",
    "lxml>=5.4.0",
    "pymupdf>=1.26.0",
    "scikit-learn>=1.6.1",
    "scrapy>=2.13.0",
    "sentence-transformers>=4.1.0",
    "straycat>=1.0.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "umap-learn>=0.5.7",
]
